# VD_games

./: Makefile  pyproject.toml
VD_games/: cli.py
VD_games/games/: calc.py  engine.py  engine.py.save  gcd.py  prime.py  progression.py
VD_games/scripts/: VD_calc.py  VD_even.py  VD_games.py  VD_gcd.py  VD_main.py  VD_prime.py  VD_progression.py
vd_games.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
