[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vd-games"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]

[project.scripts]
VD_games = "VD_games.scripts.VD_games:main"
VD-even = "VD_games.scripts.VD_even:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]
[tool.ruff]
line-length = 79
extend-select = [
    "W291",  # trailing whitespace
    "W293",  # blank line contains whitespace
    "E501",  # line too long
]
